class DeptSemCourses{
  String branch;
  int sem;
  List<CourseGroup> courseGroups;

  void addCourseToDeptSem(String courseCode){

  }
  void removeCourseFrmDeptSem(String courseCode){

  }
}

class CourseGroup{
  String courseType, courseOfferedFor;
  List<String> courseCodes;

}