class Notes{
  String description,courseName,signature,filePath;
  void edit({String description,String courseName}){

  }
  Notes({this.courseName,this.description,this.filePath});


}

final notes = [
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals',filePath: '/bmsce'),
  Notes(courseName: 'Data Structures',description: '3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals3rd Internals',filePath: '/bmsce'),
];